# coreStackVM

./: .gitignore  CMakeLists.txt  main.hpp
src/: main.cpp
src/compiler/grammer/: CoreLang.g4
src/main/: main.cpp
src/util/: Instructions.hpp
src/vm/: CSObject.cpp  CSObject.hpp  CSTyp.cpp  CSTyp.hpp  Machine.cpp  Machine.hpp  MachineStack.cpp  MachineStack.hpp  Stackframe.cpp  Stackframe.hpp  VMClass.cpp  VMClass.hpp  VMList.cpp  VMList.hpp
test/: CMakeLists.txt  cstypes_test.cpp  test_main.cpp  vm_tests.cpp
tests/: CMakeLists.txt  vm_tests.cpp
